--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>
             Click the button below to add a new task!
         </p>
-        <button class="btn">
+        <button class="btn" id="save-task">
             Add Task
         </button>
     </header>
@@ -24,9 +24,12 @@
             <h2 class="list-title">
                 Tasks To Do
             </h2>
-            <ul class="task-list">
+            <ul class="task-list" id="tasks-to-do">
                 <li class="task-item">
                     What do you need to do?
+                </li>
+                <li>
+
                 </li>
             </ul>
         </section>
