--- a/index.html
+++ b/index.html
@@ -15,9 +15,24 @@
         <p>
             Click the button below to add a new task!
         </p>
-        <button class="btn" id="save-task">
-            Add Task
-        </button>
+        <form id="task-form">
+          <div class="form-group">
+              <input type="text" name="task-name" placeholder="Enter Task Here"/>
+          </div>
+          <div class="form-group">
+              <select name="task-type" class="select-dropdown">
+                <option value="" disabled selected>Pick a task type</option>
+                <option value="Personal">Personal</option>
+                <option value="School">School</option>
+                <option value="Home">Home</option>
+              </select>
+          </div>
+          <div class="form-group">
+            <button class="btn" id="save-task">
+                Add Task
+            </button>
+          </div>
+        </form>
     </header>
     <main>
         <section class="task-list-wrapper">
@@ -27,9 +42,6 @@
             <ul class="task-list" id="tasks-to-do">
                 <li class="task-item">
                     What do you need to do?
-                </li>
-                <li>
-
                 </li>
             </ul>
         </section>
