--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </div>
         </form>
     </header>
-    <main>
+    <main class="page-content" id="page-content">
         <section class="task-list-wrapper">
             <h2 class="list-title">
                 Tasks To Do
